include airflow.cfg

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
 config/airflow-connections.yaml
-config/airflow.cfg
 keys/dvd-rental-gcp-key.json
 logs/
 dvdrental_dbt/profiles.yml
@@ -13,3 +12,5 @@ terraform/.terraform.lock.hcl
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
 terraform/variables.tf
+
+__pycache__/
